generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model User {
  id        String   @id @default(uuid())
  name      String
  email     String   @unique
  password  String
  createdAt DateTime @default(now())

  debtSources DebtSource[]
  debts       Debt[]

  installment Installment[]
  trips       Trip[]
}

model DebtSource {
  id        String         @id @default(uuid())
  name      String
  type      DebtSourceType @default(OUTRO)
  dueDay    Int
  createdAt DateTime       @default(now())

  user   User   @relation(fields: [userId], references: [id])
  userId String

  debts       Debt[]
  description String?
}

model Debt {
  id                 String   @id @default(uuid())
  title              String
  amount             Decimal
  description        String?
  installmentsNumber Int
  createdAt          DateTime @default(now())

  user   User   @relation(fields: [userId], references: [id])
  userId String

  debtSource   DebtSource @relation(fields: [debtSourceId], references: [id])
  debtSourceId String

  trip   Trip?    @relation(fields: [tripId], references: [id])
  tripId Int?
  type   DebtType @default(OUTRO)

  installments Installment[]
}

model Installment {
  id        String            @id @default(uuid())
  amount    Decimal
  month     Int
  year      Int
  status    InstallmentStatus @default(PENDING)
  createdAt DateTime          @default(now())
  updatedAt DateTime?          @updatedAt

  user   User   @relation(fields: [userId], references: [id])
  userId String
  debt   Debt   @relation(fields: [debtId], references: [id])
  debtId String
}

model Trip {
  id          Int      @id @default(autoincrement())
  startDate   DateTime
  endDate     DateTime
  location    String
  description String?
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt

  user   User   @relation(fields: [userId], references: [id])
  userId String
  debts  Debt[]
}

enum DebtSourceType {
  CARTAO
  BANCO
  PESSOA
  CREDIARIO
  OUTRO
}

enum InstallmentStatus {
  PENDING
  PAID
}

enum DebtType {
  ELETRONICO
  ROUPA
  VIAGEM
  ALIMENTACAO
  SAUDE
  EDUCACAO
  OUTRO
}
